@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-15T16:24:00Z",
-  "count_outdated" : 389,
-  "uniques_outdated" : 224,
-  "count" : 420,
-  "uniques" : 242,
+  "timestamp" : "2022-07-16T01:27:55Z",
+  "count_outdated" : 393,
+  "uniques_outdated" : 226,
+  "count" : 424,
+  "uniques" : 243,
   "clones" : [
-    {
-      "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-02T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
